--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
     <div class="container">
-        <h1>スクール21川越本部教室<br>2025年度夏期講習 料金シミュレーター</h1>
+        <h1>スクール21<br>2025年度夏期講習 料金シミュレーター</h1>
 
         <div class="form-group">
             <label for="grade">1. 学年を選択してください</label>
